--- a/_posts/2023-03-12-Title.md
+++ b/_posts/2023-03-12-Title.md
@@ -1,11 +1,12 @@
 ---
-title: Title
-author: Chris
+title: Graduate Seminar: Conditional Generative Models for Implicit Plant Growth Modeling
+author: Mohamed Debbagh
 layout: post
-icon: fa-lightbulb
+icon: fa-duotone fa-leafy-green
 icon-style: regular
 ---
-See the icon?
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/eExOkKe-A_o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 Lorem ipsum dolor sit amet, harum malorum nominavi mea et. Atqui maluisset duo cu, summo dignissim voluptatum sit ut. Ad quo quidam delicatissimi. Cum nihil noster patrioque id. Per at maiorum definitiones. Cu vix sint aliquip. No duo alia sale persecuti.
 
