--- a/_posts/2023-03-26-DRF.md
+++ b/_posts/2023-03-26-DRF.md
@@ -1,5 +1,5 @@
 ---
-title: CRF for Image Analysis Presentation
+title: CRF Presentation
 author: Mohamed Debbagh
 layout: post
 icon: fa-solid fa-eye
