--- a/_posts/2023-03-17-NeRF.md
+++ b/_posts/2023-03-17-NeRF.md
@@ -12,8 +12,8 @@ I RECOMMEND WATCHING THIS IN 2X SPEED!
 
 **Presentation:**
 
-<object data="./assets/papers/2023-03-17_NeRF_Literature_Review.pdf" type="application/pdf" width="700px" height="700px">
-    <embed src="./assets/papers/2023-03-17_NeRF_Literature_Review.pdf">
+<object data="/assets/papers/2023-03-17_NeRF_Literature_Review.pdf" type="application/pdf" width="700px" height="700px">
+    <embed src="/assets/papers/2023-03-17_NeRF_Literature_Review.pdf">
         <p>This browser does not support PDFs. Please download the PDF to view it: <a href="./assets/papers/2023-03-17_NeRF_Literature_Review.pdf">Download PDF</a>.</p>
     </embed>
 </object>
