--- a/_posts/2023-03-17-NeRF.md
+++ b/_posts/2023-03-17-NeRF.md
@@ -1,5 +1,5 @@
 ---
-title: NeRF Literature Review
+title: Neural Radiance Fields (Review)
 author: Mohamed Debbagh
 layout: post
 icon: fa-solid fa-eye
