--- a/_posts/2023-03-17-NeRF.md
+++ b/_posts/2023-03-17-NeRF.md
@@ -1,10 +1,10 @@
 ---
-title: Neural Radiance Fields (Review)
+title: NeRF Lit. Review
 author: Mohamed Debbagh
 layout: post
 icon: fa-solid fa-eye
 ---
-**Topic:** Conditional Random Fields for Image Analysis
+**Topic:** Neural Radiance Fields (NeRFs): A Review and Some Recent Developments
 
 Overview presentation of Discriminative random fields, also known as non-sparse conditional random fields for a 2-D lattice.
 
@@ -13,6 +13,8 @@ I RECOMMEND WATCHING THIS IN 2X SPEED!
 **Presentation:**
 
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/presentation/d/e/2PACX-1vSsSsveugCILHjAuMHYB2T9JrbvVPvl7u9N_yntTKGy2CaBrR-QYA8TcezhuHQgVszszw7jQSftED6D/embed?start=true&loop=true&delayms=5000' frameborder='0' width='1440' height='839' allowfullscreen='true' mozallowfullscreen='true' webkitallowfullscreen='true'></iframe></div>
+
+<>
 
 **Paper:**
 
