--- a/_posts/2023-03-17-NeRF.md
+++ b/_posts/2023-03-17-NeRF.md
@@ -6,16 +6,25 @@ icon: fa-solid fa-eye
 ---
 **Topic:** Neural Radiance Fields (NeRFs): A Review and Some Recent Developments
 
-Overview presentation of Discriminative random fields, also known as non-sparse conditional random fields for a 2-D lattice.
+Abstract—Neural Radience Field (NeRF) is a framework that
+represents a 3D scene in the weights of a fully connected
+neural network, known as the Multi-Layer Perception(MLP). The
+method was introduced for the task of novel view synthesis and
+is able to achieve state-of-the-art photorealistic image renderings
+from a given continuous viewpoint. NeRFs have become a popular
+field of research as recent developments have been made that
+expand the performance and capabilities of the base framework.
+Recent developments include methods that require less images
+to train the model for view synthesis as well as methods that are
+able to generate views from unconstrained and dynamic scene
+representations.
 
-I RECOMMEND WATCHING THIS IN 2X SPEED!
+*Index Terms*—volume rendering, view synthesis, scene representation, deep learning
 
-## **Presentation:**
+### Presentation:
 
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/presentation/d/e/2PACX-1vSsSsveugCILHjAuMHYB2T9JrbvVPvl7u9N_yntTKGy2CaBrR-QYA8TcezhuHQgVszszw7jQSftED6D/embed?start=true&loop=true&delayms=5000' frameborder='0' width='1440' height='839' allowfullscreen='true' mozallowfullscreen='true' webkitallowfullscreen='true'></iframe></div>
 
-<>
-
-## **Paper:**
+### Paper:
 
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><object data='/assets/papers/2023-03-17_NeRF_Literature_Review.pdf' type='application/pdf'>     <embed src='/assets/papers/2023-03-17_NeRF_Literature_Review.pdf'>         <p>This browser does not support PDFs. Please download the PDF to view it: <a href='/assets/papers/2023-03-17_NeRF_Literature_Review.pdf'>Download PDF</a>.</p>     </embed> </object></div>
