--- a/_posts/2023-03-17-NeRF.md
+++ b/_posts/2023-03-17-NeRF.md
@@ -1,12 +1,12 @@
 ---
-title: NeRF Lit. Review
+title: NeRF Literature Review
 author: Mohamed Debbagh
 layout: post
 icon: fa-solid fa-eye
 ---
 **Topic:** Neural Radiance Fields (NeRFs): A Review and Some Recent Developments
 
-Abstract—Neural Radience Field (NeRF) is a framework that
+Abstract—Neural Radiance Field (NeRF) is a framework that
 represents a 3D scene in the weights of a fully connected
 neural network, known as the Multi-Layer Perception(MLP). The
 method was introduced for the task of novel view synthesis and
