--- a/_posts/2023-03-17-NeRF.md
+++ b/_posts/2023-03-17-NeRF.md
@@ -6,7 +6,7 @@ icon: fa-solid fa-eye
 ---
 **Topic:** Neural Radiance Fields (NeRFs): A Review and Some Recent Developments
 
-Abstract—Neural Radiance Field (NeRF) is a framework that
+**Abstract** — Neural Radiance Field (NeRF) is a framework that
 represents a 3D scene in the weights of a fully connected
 neural network, known as the Multi-Layer Perception(MLP). The
 method was introduced for the task of novel view synthesis and
@@ -19,7 +19,7 @@ to train the model for view synthesis as well as methods that are
 able to generate views from unconstrained and dynamic scene
 representations.
 
-*Index Terms*—volume rendering, view synthesis, scene representation, deep learning
+***Index Terms***—volume rendering, view synthesis, scene representation, deep learning
 
 ### Presentation:
 
