--- a/_posts/2023-03-17-NeRF.md
+++ b/_posts/2023-03-17-NeRF.md
@@ -19,7 +19,7 @@ to train the model for view synthesis as well as methods that are
 able to generate views from unconstrained and dynamic scene
 representations.
 
-***Index Terms***—volume rendering, view synthesis, scene representation, deep learning
+**_Index Terms_**—volume rendering, view synthesis, scene representation, deep learning
 
 ### Presentation:
 
