--- a/_posts/2023-03-17-NeRF.md
+++ b/_posts/2023-03-17-NeRF.md
@@ -31,7 +31,7 @@ representations.
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><object data='/assets/papers/2023-03-17_NeRF_Literature_Review.pdf' type='application/pdf'>     <embed src='/assets/papers/2023-03-17_NeRF_Literature_Review.pdf'>         <p>This browser does not support PDFs. Please download the PDF to view it: <a href='/assets/papers/2023-03-17_NeRF_Literature_Review.pdf'>Download PDF</a>.</p>     </embed> </object></div>
 <br/>
 
-### Citation (Bibtex)):
+### Citation (Bibtex):
 
 ```
 @inproceedings{mildenhall2020nerf,
