--- a/_posts/2023-02-24-DRF.md
+++ b/_posts/2023-02-24-DRF.md
@@ -1,5 +1,5 @@
 ---
-title: CRF Presentation
+title: CRF Lecture
 author: Mohamed Debbagh
 layout: post
 icon: fa-solid fa-eye
@@ -10,5 +10,11 @@ Overview presentation of Discriminative random fields, also known as non-sparse 
 
 I RECOMMEND WATCHING THIS IN 2X SPEED!
 
-**Presentation:**
+### Lecture slides:
+
+<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/presentation/d/e/2PACX-1vQhtsL2GRYAey0PEHN5SSE_F7zuss3Wzpc3wqe_yLIe-OnqRk3HIzoYo02URwKu8ktE6qL2I-MMcLnF/embed?start=true&loop=true&delayms=5000' frameborder='0' width='1440' height='839' allowfullscreen='true' mozallowfullscreen='true' webkitallowfullscreen='true'></iframe></div>
+<br/>
+
+### Presentation:
+
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed//8CdOHGfyIGs' frameborder='0' allowfullscreen></iframe></div>
