--- a/_posts/2023-02-24-DRF.md
+++ b/_posts/2023-02-24-DRF.md
@@ -8,7 +8,6 @@ icon: fa-solid fa-eye
 
 Overview presentation of Discriminative random fields, also known as non-sparse conditional random fields for a 2-D lattice.
 
-I RECOMMEND WATCHING THIS IN 2X SPEED!
 
 ### Lecture slides:
 
@@ -17,4 +16,5 @@ I RECOMMEND WATCHING THIS IN 2X SPEED!
 
 ### Presentation:
 
+*I recommend watching this in 2X speed!*
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed//8CdOHGfyIGs' frameborder='0' allowfullscreen></iframe></div>
