--- a/_posts/2023-04-24-CVAE.md
+++ b/_posts/2023-04-24-CVAE.md
@@ -6,20 +6,26 @@ icon: fa-solid fa-eye
 ---
 **Topic:** Learning Structured Output Representations from Attributes using Deep Conditional Generative Models
 
-**Abstract** — Neural Radiance Field (NeRF) is a framework that
-represents a 3D scene in the weights of a fully connected
-neural network, known as the Multi-Layer Perception(MLP). The
-method was introduced for the task of novel view synthesis and
-is able to achieve state-of-the-art photorealistic image renderings
-from a given continuous viewpoint. NeRFs have become a popular
-field of research as recent developments have been made that
-expand the performance and capabilities of the base framework.
-Recent developments include methods that require less images
-to train the model for view synthesis as well as methods that are
-able to generate views from unconstrained and dynamic scene
-representations.
-
-**_Index Terms_**—volume rendering, view synthesis, scene representation, deep learning
+**Abstract** — Structured output representation is a generative task explored in 
+computer vision that often times requires the mapping of low dimensional 
+features to high dimensional structured outputs. Losses in complex spatial 
+information in deterministic approaches such as Convolutional Neural Networks 
+(CNN) lead to uncertainties and ambiguous structures within a single output 
+representation. A probabilistic approach through deep Conditional Generative 
+Models (CGM) is presented by Sohn et al. in which a particular model known 
+as the Conditional Variational Auto-encoder (CVAE) is introduced and explored. 
+While the original paper focuses on the task of image segmentation, 
+this paper adopts the CVAE framework for the task of controlled output 
+representation through attributes. This approach allows us to learn a 
+disentangled multimodal prior distribution, resulting in more controlled 
+and robust approach to sample generation. In this work we recreate the 
+CVAE architecture and train it on images conditioned on various attributes 
+obtained from two image datasets; the Large-scale CelebFaces 
+Attributes (CelebA) dataset and the Caltech-UCSD Birds (CUB-200-2011) dataset. We attempt 
+to generate new faces with distinct attributes such as hair color and glasses, 
+as well as different bird species samples with various attributes. We further
+introduce strategies for improving generalized sample generation by applying 
+a weighted term to the variational lower bound.
 
 ### Lecture slides:
 
