--- a/_posts/2023-04-24-test.md
+++ b/_posts/2023-04-24-test.md
@@ -3,5 +3,5 @@ title: test
 author: Mohamed Debbagh
 layout: page
 icon: fa-solid fa-eye
-permalink: https://github.com/moha7108/
+url: https://github.com/moha7108/
 ---
