--- a/_posts/2023-04-13-NST.md
+++ b/_posts/2023-04-13-NST.md
@@ -23,12 +23,12 @@ representations.
 
 ### Presentation and Video:
 
-*Video is on the last slide*
+*Video is on the last slide (slide 13)*
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/presentation/d/e/2PACX-1vTz6Kjh5SH6OD0m1CjkkL43sEEUkX8pp9SK95rksOYOxa2Btmq5yp83PTbxGAyq402_AG8jmNalwn40/embed?start=true&loop=false&delayms=5000' frameborder='0' width='1440' height='839' allowfullscreen='true' mozallowfullscreen='true' webkitallowfullscreen='true'></iframe></div>
 
 ### Paper:
 
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><object data='/assets/papers/2023-04-13-NST' type='application/pdf'>     <embed src='/assets/papers/2023-04-13-NST'>         <p>This browser does not support PDFs. Please download the PDF to view it: <a href='/assets/papers/2023-04-13-NST'>Download PDF</a>.</p>     </embed> </object></div>
+<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><object data='/assets/papers/2023-04-13-NST.pdf' type='application/pdf'>     <embed src='/assets/papers/2023-04-13-NST.pdf'>         <p>This browser does not support PDFs. Please download the PDF to view it: <a href='/assets/papers/2023-04-13-NST.pdf'>Download PDF</a>.</p>     </embed> </object></div>
 <br/>
 
 ### Citation (Bibtex):
