--- a/_posts/2023-04-13-NST.md
+++ b/_posts/2023-04-13-NST.md
@@ -6,38 +6,42 @@ icon: fa-solid fa-eye
 ---
 **Topic:** Stylistic Music Video Through Neural Matting and Style Transfer
 
-**Abstract** — Neural Radiance Field (NeRF) is a framework that
-represents a 3D scene in the weights of a fully connected
-neural network, known as the Multi-Layer Perception(MLP). The
-method was introduced for the task of novel view synthesis and
-is able to achieve state-of-the-art photorealistic image renderings
-from a given continuous viewpoint. NeRFs have become a popular
-field of research as recent developments have been made that
-expand the performance and capabilities of the base framework.
-Recent developments include methods that require less images
-to train the model for view synthesis as well as methods that are
-able to generate views from unconstrained and dynamic scene
-representations.
+**Abstract** — Video styling and special effects are important components
+to developing a popular music video. Music artists often
+accompany their songs with visuals to showcase their own
+styles outside the auditory experience. Similar to taste
+and smell, audio and visual stimuli are often linked together
+and tend to enhance general feelings conveyed by the music,
+and vice-versa. While the story-line of a music video is not
+as significant to the experience, the visual effects will often
+make or break a song. Songs with music videos tend to
+exponentially increase an artist’s visibility within the industry.
+While established artists spend millions of dollars on sets and
+special effects, smaller underground artists rely on abstract
+and innovative software visualization techniques to enhance
+their music videos and stand out from the crowd. With
+significant advances in deep learning, many of these effects
+can be achieved through computational photography and video
+processing techniques. This paper explores two techniques that
+can enhance a music video, these include re-styling of the
+video using abstract visual style transfer and video matting to
+achieve a separation of foreground and background similar to
+a green screen. Applying these visual techniques on videos are
+often more complicated than standard single image processing
+since they need to maintain temporal coherence between
+frames and must be considered throughout. To showcase these
+effects, these techniques are applied to a generic rap music
+video. Both techniques applied in this paper utilize neural
+network models, and thus we consider them neural methods.
 
-**_Index Terms_**—volume rendering, view synthesis, scene representation, deep learning
+**_Index Terms_**—style transfer, video matting, video processing, deep learning
 
 ### Presentation and Video:
 
 *Video is on the last slide (slide 13)*
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/presentation/d/e/2PACX-1vTz6Kjh5SH6OD0m1CjkkL43sEEUkX8pp9SK95rksOYOxa2Btmq5yp83PTbxGAyq402_AG8jmNalwn40/embed?start=true&loop=false&delayms=5000' frameborder='0' width='1440' height='839' allowfullscreen='true' mozallowfullscreen='true' webkitallowfullscreen='true'></iframe></div>
+<br/>
 
 ### Paper:
 
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><object data='/assets/papers/2023-04-13-NST.pdf' type='application/pdf'>     <embed src='/assets/papers/2023-04-13-NST.pdf'>         <p>This browser does not support PDFs. Please download the PDF to view it: <a href='/assets/papers/2023-04-13-NST.pdf'>Download PDF</a>.</p>     </embed> </object></div>
-<br/>
-
-### Citation (Bibtex):
-
-```
-@inproceedings{mildenhall2020nerf,
- title={NeRF: Representing Scenes as Neural Radiance Fields for View Synthesis},
- author={Ben Mildenhall and Pratul P. Srinivasan and Matthew Tancik and Jonathan T. Barron and Ravi Ramamoorthi and Ren Ng},
- year={2020},
- booktitle={ECCV},
-}
-```
