--- a/_posts/2023-03-17-NeRF.md
+++ b/_posts/2023-03-17-NeRF.md
@@ -28,16 +28,20 @@ representations.
 
 ### Paper:
 
+<a href="https://arxiv.org/abs/2305.00375"><strong>Arxiv</strong></a> 
+
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><object data='/assets/papers/2023-03-17_NeRF_Literature_Review.pdf' type='application/pdf'>     <embed src='/assets/papers/2023-03-17_NeRF_Literature_Review.pdf'>         <p>This browser does not support PDFs. Please download the PDF to view it: <a href='/assets/papers/2023-03-17_NeRF_Literature_Review.pdf'>Download PDF</a>.</p>     </embed> </object></div>
 <br/>
 
 ### Citation (Bibtex):
 
 ```
-@inproceedings{mildenhall2020nerf,
- title={NeRF: Representing Scenes as Neural Radiance Fields for View Synthesis},
- author={Ben Mildenhall and Pratul P. Srinivasan and Matthew Tancik and Jonathan T. Barron and Ravi Ramamoorthi and Ren Ng},
- year={2020},
- booktitle={ECCV},
+@misc{debbagh2023neural,
+      title={Neural Radiance Fields (NeRFs): A Review and Some Recent Developments}, 
+      author={Mohamed Debbagh},
+      year={2023},
+      eprint={2305.00375},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
 }
 ```
