--- a/_posts/2023-03-17-NeRF.md
+++ b/_posts/2023-03-17-NeRF.md
@@ -4,7 +4,7 @@ author: Mohamed Debbagh
 layout: post
 icon: fa-solid fa-eye
 ---
-**Topic:** Neural Radiance Fields (NeRFs): A Review and Some Recent Developments
+**Topic:** Neural Radiance Fields (NeRFs): A Review and Some Recent Developments, <a href="https://arxiv.org/abs/2305.00375"><strong>Arxiv</strong></a> 
 
 **Abstract** — Neural Radiance Field (NeRF) is a framework that
 represents a 3D scene in the weights of a fully connected
@@ -17,7 +17,9 @@ expand the performance and capabilities of the base framework.
 Recent developments include methods that require less images
 to train the model for view synthesis as well as methods that are
 able to generate views from unconstrained and dynamic scene
-representations.
+representations. 
+<a href="https://arxiv.org/abs/2305.00375"><strong>Arxiv</strong></a> 
+
 
 **_Index Terms_**—volume rendering, view synthesis, scene representation, deep learning
 
@@ -26,7 +28,7 @@ representations.
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/presentation/d/e/2PACX-1vSsSsveugCILHjAuMHYB2T9JrbvVPvl7u9N_yntTKGy2CaBrR-QYA8TcezhuHQgVszszw7jQSftED6D/embed?start=true&loop=true&delayms=5000' frameborder='0' width='1440' height='839' allowfullscreen='true' mozallowfullscreen='true' webkitallowfullscreen='true'></iframe></div>
 <br/>
 
-### Paper: <a href="https://arxiv.org/abs/2305.00375"><strong>Arxiv</strong></a> 
+### Paper: 
 
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><object data='/assets/papers/2023-03-17_NeRF_Literature_Review.pdf' type='application/pdf'>     <embed src='/assets/papers/2023-03-17_NeRF_Literature_Review.pdf'>         <p>This browser does not support PDFs. Please download the PDF to view it: <a href='/assets/papers/2023-03-17_NeRF_Literature_Review.pdf'>Download PDF</a>.</p>     </embed> </object></div>
 <br/>
