--- a/_posts/2023-03-17-NeRF.md
+++ b/_posts/2023-03-17-NeRF.md
@@ -4,7 +4,7 @@ author: Mohamed Debbagh
 layout: post
 icon: fa-solid fa-eye
 ---
-**Topic:** Neural Radiance Fields (NeRFs): A Review and Some Recent Developments, <a href="https://arxiv.org/abs/2305.00375"><strong>Arxiv</strong></a> 
+**Topic:** Neural Radiance Fields (NeRFs): A Review and Some Recent Developments. 
 
 **Abstract** — Neural Radiance Field (NeRF) is a framework that
 represents a 3D scene in the weights of a fully connected
