--- a/_posts/2023-04-24-CVAE.md
+++ b/_posts/2023-04-24-CVAE.md
@@ -6,6 +6,8 @@ icon: fa-solid fa-eye
 ---
 **Topic:** Learning Structured Output Representations from Attributes using Deep Conditional Generative Models
 
+<a href="https://arxiv.org/abs/2305.00980"><strong>Arxiv</strong></a> 
+
 **Abstract** — Structured output representation is a generative task explored in 
 computer vision that often times requires the mapping of low dimensional 
 features to high dimensional structured outputs. Losses in complex spatial 
