--- a/_posts/2023-04-24-CVAE.md
+++ b/_posts/2023-04-24-CVAE.md
@@ -42,10 +42,12 @@ a weighted term to the variational lower bound.
 ### Citation (Bibtex):
 
 ```
-@inproceedings{mildenhall2020nerf,
- title={NeRF: Representing Scenes as Neural Radiance Fields for View Synthesis},
- author={Ben Mildenhall and Pratul P. Srinivasan and Matthew Tancik and Jonathan T. Barron and Ravi Ramamoorthi and Ren Ng},
- year={2020},
- booktitle={ECCV},
+@misc{debbagh2023learning,
+      title={Learning Structured Output Representations from Attributes using Deep Conditional Generative Models}, 
+      author={Mohamed Debbagh},
+      year={2023},
+      eprint={2305.00980},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
 }
 ```
