--- a/_posts/2023-08-15-CHIPPRD.md
+++ b/_posts/2023-08-15-CHIPPRD.md
@@ -1,5 +1,5 @@
 ---
-title: Controlled Hydroponics Image Platform
+title: Controlled Hydroponics Image Platform (CHIP)
 author: Mohamed Debbagh
 layout: post
 icon: fa-solid fa-robot
