--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -4,14 +4,12 @@ author: Mohamed Debbagh
 layout: post
 icon: fa-solid fa-eye
 ---
-Raspberry pi based Wi-Fi Bridge for routing clients to internet connection through a router, Often used as a repeater, or bypass enterprise wpa security protocol
-
-**Abstract** — 
+ A Raspberry Pi (RPI) based Wi-Fi Bridge for routing clients to internet connection through a RPI router. It is used as a Wi-Fi repeater, or to give access to internet connections with enterprise WPA security protocol for lower level electronics such as Wi-Fi enabled microcontrollers and IOT devices. Users may also want to use this as an easy-to-use interface for accessing RPI through local networks over SSH after first time installation, without having a monitor and keyboard setup or configuring settings pre-installation with RPI imager.
 
 ### Lecture slides:
 
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/presentation/d/e/2PACX-1vSsbmKOLcm0Y3kSmO2Iyj76pJZNOuj9v3K2x5O0BYFXWcaK-l8ex586Pr44z5yEYEZdSk7RSevOSpdf/embed?start=true&loop=true&delayms=5000' frameborder='0' width='1440' height='839' allowfullscreen='true' mozallowfullscreen='true' webkitallowfullscreen='true'></iframe></div>
-<br/>
+<!-- <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/presentation/d/e/2PACX-1vSsbmKOLcm0Y3kSmO2Iyj76pJZNOuj9v3K2x5O0BYFXWcaK-l8ex586Pr44z5yEYEZdSk7RSevOSpdf/embed?start=true&loop=true&delayms=5000' frameborder='0' width='1440' height='839' allowfullscreen='true' mozallowfullscreen='true' webkitallowfullscreen='true'></iframe></div>
+<br/> -->
 
 ### Paper:
 
