--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -6,18 +6,7 @@ icon: fa-solid fa-eye
 ---
  A Raspberry Pi (RPI) based Wi-Fi Bridge for routing clients to internet connection through a RPI router. It is used as a Wi-Fi repeater, or to give access to internet connections with enterprise WPA security protocol for lower level electronics such as Wi-Fi enabled microcontrollers and IOT devices. Users may also want to use this as an easy-to-use interface for accessing RPI through local networks over SSH after first time installation, without having a monitor and keyboard setup or configuring settings pre-installation with RPI imager.
 
-### Lecture slides:
-
-<!-- <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/presentation/d/e/2PACX-1vSsbmKOLcm0Y3kSmO2Iyj76pJZNOuj9v3K2x5O0BYFXWcaK-l8ex586Pr44z5yEYEZdSk7RSevOSpdf/embed?start=true&loop=true&delayms=5000' frameborder='0' width='1440' height='839' allowfullscreen='true' mozallowfullscreen='true' webkitallowfullscreen='true'></iframe></div>
-<br/> -->
-
-### Paper:
-
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><object data='/assets/papers/2023-04-24_attr_to_img.pdf' type='application/pdf'>     <embed src='/assets/papers/2023-04-24_attr_to_img.pdf'>         <p>This browser does not support PDFs. Please download the PDF to view it: <a href='/assets/papers/2023-04-24_attr_to_img.pdf'>Download PDF</a>.</p>     </embed> </object></div>
-<br/>
-
-### Citation (Bibtex):
-
+### Cite this project (BibTeX):
 ```
 @misc{debbagh2023learning,
       title={Learning Structured Output Representations from Attributes using Deep Conditional Generative Models}, 
@@ -28,3 +17,33 @@ icon: fa-solid fa-eye
       primaryClass={cs.CV}
 }
 ```
+
+### Installation Instructions
+- The RPi OS image file can be downloaded [here](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link).
+- You can install the image file onto a microSD card using the [RPi Imager application](https://www.raspberrypi.com/software/).
+- Once the image file has been copied to the microSD card, instert the card into the RPi, plug in the wifi-dongle into the USB port of the RPi, and then boot the device.
+- Done, the WI-PI bridge should be working! Check your network wifi connections for the SSID [wipi_bridge]
+
+### Connecting to the WI-PI bridge dashboard
+#### Access without network connection(First time Connecting):​
+
+- Connect client to Access Point (default: wipi_bridge, psk: adamchuk)​
+- On web browser go to: *10.0.1.1:1880/​*
+- Configure settings
+
+#### Accessing through connected network connection
+
+- On web browser go to: *wipi-bridge.local:1880/* (mdns) or *x.x.x.x:1880/* (x.x.x.x is the network IP of the WI-PI Brigdge assigned by the router)​
+
+
+
+### Lecture slides:
+
+<!-- <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/presentation/d/e/2PACX-1vSsbmKOLcm0Y3kSmO2Iyj76pJZNOuj9v3K2x5O0BYFXWcaK-l8ex586Pr44z5yEYEZdSk7RSevOSpdf/embed?start=true&loop=true&delayms=5000' frameborder='0' width='1440' height='839' allowfullscreen='true' mozallowfullscreen='true' webkitallowfullscreen='true'></iframe></div>
+<br/> -->
+
+### Paper:
+
+<!-- <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><object data='/assets/papers/2023-04-24_attr_to_img.pdf' type='application/pdf'>     <embed src='/assets/papers/2023-04-24_attr_to_img.pdf'>         <p>This browser does not support PDFs. Please download the PDF to view it: <a href='/assets/papers/2023-04-24_attr_to_img.pdf'>Download PDF</a>.</p>     </embed> </object></div>
+<br/> -->
+
