--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -6,7 +6,8 @@ icon: fa-solid fa-eye
 ---
  A Raspberry Pi (RPI) based Wi-Fi Bridge for routing clients to internet connection through a RPI router. It is used as a Wi-Fi repeater, or to give access to internet connections with enterprise WPA security protocol for lower level electronics such as Wi-Fi enabled microcontrollers and IOT devices. Users may also want to use this as an easy-to-use interface for accessing RPI through local networks over SSH after first time installation, without having a monitor and keyboard setup or configuring settings pre-installation with RPI imager.
 
- ![image](/assets/images/wipi/bridge_diagram.png)
+ <!-- ![image](/assets/images/wipi/bridge_diagram.png) -->
+<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'> <iframe src='/assets/images/wipi/bridge_diagram.png' style='border:0'></iframe></div>
 
 ### Cite this project (BibTeX):
 ```
