--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -20,8 +20,10 @@ icon: fa-solid fa-eye
 ```
 
 <style>.embed-container { position: relative; padding-bottom: 25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='/assets/images/wipi/bridge_diagram.png' style='border:0'></iframe></div>
+
 ### Needed Materials
 
+<img src="assets/certificates/preview/20230227-Interdisciplinary Workshop for Young Scientists from Canada and Ukraine.png">
 
 ### Installation Instructions
 - The RPi OS image file can be downloaded [here](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link).
