--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -23,7 +23,7 @@ icon: fa-solid fa-eye
 
 ### Needed Materials
 
-<img src="/assets/certificates/preview/20230227-Interdisciplinary Workshop for Young Scientists from Canada and Ukraine.png">
+<img src="/assets/images/wipi/bridge_diagram.png">
 
 ### Installation Instructions
 - The RPi OS image file can be downloaded [here](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link).
