--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -19,7 +19,7 @@ icon: fa-solid fa-eye
 }
 ```
 
-<style>.embed-container { position: relative; padding-bottom: 50%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><img src="/assets/images/wipi/bridge_diagram.png"></div>
+<style>.embed-container { position: relative; padding-bottom: 50%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><img src="/assets/images/wipi/bridge_diagram.png" style="width:35%"></div>
 
 ### Needed Materials
 
