--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -18,10 +18,10 @@ icon: fa-solid fa-eye
       primaryClass={cs.CV}
 }
 ```
-
+### Overview
 <style>.embed-container { position: relative; padding-bottom: 30%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><img src="/assets/images/wipi/bridge_diagram.png" style="width:100%"></div>
 
-### Needed Materials
+#### Needed Materials
 
 
 ### Installation Instructions
