--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -7,7 +7,7 @@ icon: fa-solid fa-eye
  A Raspberry Pi (RPI) based Wi-Fi Bridge for routing clients to internet connection through a RPI router. It is used as a Wi-Fi repeater, or to give access to internet connections with enterprise WPA security protocol for lower level electronics such as Wi-Fi enabled microcontrollers and IOT devices. Users may also want to use this as an easy-to-use interface for accessing RPI through local networks over SSH after first time installation, without having a monitor and keyboard setup or configuring settings pre-installation with RPI imager.
 
 
-### Cite this project (BibTeX):
+#### Cite this project (BibTeX):
 ```
 @misc{debbagh2023learning,
       title={Learning Structured Output Representations from Attributes using Deep Conditional Generative Models}, 
@@ -19,10 +19,10 @@ icon: fa-solid fa-eye
 }
 ```
 ### Overview
-<style>.embed-container { position: relative; padding-bottom: 10%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><img src="/assets/images/wipi/bridge_diagram.png" style="width:100%"></div>
+<img src="/assets/images/wipi/bridge_diagram.png" style="width:100%">
 
 #### Needed Materials
-<img src="/assets/images/wipi/bridge_diagram.png" style="width:100%">
+
 
 ### Installation Instructions
 - The RPi OS image file can be downloaded [here](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link).
