update wipi bridge project

--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -21,6 +21,8 @@ icon: fa-solid fa-eye
 ### Overview
 <img src="/assets/images/wipi/bridge_diagram.png" style="width:100%">
 
+<img src="/assets/images/wipi/wipi.png" style="width:100%">
+
 #### Needed Materials
 
 
