update wipi bridge project

--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -24,7 +24,10 @@ icon: fa-solid fa-eye
 <img src="/assets/images/wipi/wipi.png" style="width:100%">
 
 #### Needed Materials
-
+- Raspberry Pi 3B+​
+- Wi-Fi Dongle​
+- Micro SD Card​
+- Power Supply
 
 ### Installation Instructions
 - The RPi OS image file can be downloaded [here](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link).
