update wipi bridge project

--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -24,10 +24,14 @@ icon: fa-solid fa-eye
 <img src="/assets/images/wipi/wipi.png" style="width:25%">
 
 #### Needed Materials
-- Raspberry Pi 3B+​
-- Wi-Fi Dongle​
+- Raspberry Pi<sup>**</sup>
+- Wi-Fi Dongle​<sup>**</sup>
 - Micro SD Card​
-- Power Supply
+- Power Supply​<sup>***</sup>
+
+<sub><sup><sup>**</sup> Check list of [compatible devices](#compatible-devices)</sup></sub>
+
+<sub><sup><sup>***</sup> 5V3A supply recommended</sup></sub>
 
 ### Installation Instructions
 - The RPi OS image file can be downloaded [here](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link).
@@ -51,7 +55,7 @@ icon: fa-solid fa-eye
 <!-- <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/presentation/d/e/2PACX-1vSsbmKOLcm0Y3kSmO2Iyj76pJZNOuj9v3K2x5O0BYFXWcaK-l8ex586Pr44z5yEYEZdSk7RSevOSpdf/embed?start=true&loop=true&delayms=5000' frameborder='0' width='1440' height='839' allowfullscreen='true' mozallowfullscreen='true' webkitallowfullscreen='true'></iframe></div>
 <br/> -->
 
-### Paper:
+### Compatible Devices:
 
 <!-- <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><object data='/assets/papers/2023-04-24_attr_to_img.pdf' type='application/pdf'>     <embed src='/assets/papers/2023-04-24_attr_to_img.pdf'>         <p>This browser does not support PDFs. Please download the PDF to view it: <a href='/assets/papers/2023-04-24_attr_to_img.pdf'>Download PDF</a>.</p>     </embed> </object></div>
 <br/> -->
