update wipi bridge project

--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -29,9 +29,7 @@ icon: fa-solid fa-eye
 - Micro SD Card​
 - Power Supply​<sup>***</sup>
 
-<sub><sup><sup>**</sup> Check list of [compatible devices](#compatible-devices)</sup></sub>
-
-<sub><sup><sup>***</sup> 5V3A supply recommended</sup></sub>
+<sub><sup><sup>\**</sup> Check list of [compatible devices](#compatible-devices)</sup></sub></br><sub><sup><sup>\***</sup> 5V3A supply recommended</sup></sub>
 
 ### Installation Instructions
 - The RPi OS image file can be downloaded [here](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link).
