update wipi bridge project

--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -23,32 +23,32 @@ icon: fa-solid fa-eye
 
 <img src="/assets/images/wipi/wipi.png" style="width:25%">
 
-#### Needed Materials
-- Raspberry Pi<sup>**</sup>
-- Wi-Fi Dongle​<sup>**</sup>
+#### Materials
+- Raspberry Pi<sup>\**</sup>
+- Wi-Fi Dongle​<sup>\**</sup>
 - Micro SD Card​
-- Power Supply​<sup>***</sup>
+- Power Supply​<sup>\***</sup>
+- Case (Optional)
 
-<sub><sup><sup>\**</sup> Check list of [compatible devices](#compatible-devices)</sup></sub>
-<br>
-<sub><sup><sup>\***</sup> 5V3A supply recommended</sup></sub>
+<sub><sup><sup>\**</sup> Check list of [compatible devices](#compatible-devices)</sup></sub>,
+<sub><sup><sup>\***</sup> 5V 3A supply recommended</sup></sub>
 
 ### Installation Instructions
-- The RPi OS image file can be downloaded [here](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link).
-- You can install the image file onto a microSD card using the [RPi Imager application](https://www.raspberrypi.com/software/).
-- Once the image file has been copied to the microSD card, instert the card into the RPi, plug in the wifi-dongle into the USB port of the RPi, and then boot the device.
-- Done, the WI-PI bridge should be working! Check your network wifi connections for the SSID [wipi_bridge]
+1. The RPi OS image file can be downloaded [here](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link).
+1. You can install the image file onto a microSD card using the [RPi Imager application](https://www.raspberrypi.com/software/).
+1. Once the image file has been copied to the microSD card, instert the card into the RPi, plug in the wifi-dongle into the USB port of the RPi, and then boot the device.
+1. Done, the WI-PI bridge should be working! Check your network wifi connections for the SSID [wipi_bridge]
 
 ### Connecting to the WI-PI bridge dashboard
 #### Access without network connection(First time Connecting):​
 
-- Connect client to Access Point (default: wipi_bridge, psk: adamchuk)​
-- On web browser go to: *10.0.1.1:1880/​*
-- Configure settings
+1. Connect client to Access Point (default: wipi_bridge, psk: adamchuk)​
+1. On web browser go to: *10.0.1.1:1880/​* or *wipi-bridge.local:1880/* (mdns option)
+1. Configure settings
 
 #### Accessing through connected network connection
 
-- On web browser go to: *wipi-bridge.local:1880/* (mdns) or *x.x.x.x:1880/* (x.x.x.x is the network IP of the WI-PI Brigdge assigned by the router)​
+1. On web browser go to: *wipi-bridge.local:1880/* (mdns option) or *x.x.x.x:1880/* (x.x.x.x is the network IP of the WI-PI Brigdge assigned by the router)​
 
 ### Interface:
 
