update wipi bridge project

--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -9,13 +9,11 @@ icon: fa-solid fa-eye
 
 #### Cite this project (BibTeX):
 ```
-@misc{debbagh2023learning,
-      title={Learning Structured Output Representations from Attributes using Deep Conditional Generative Models}, 
+@misc{debbagh2023wipi,
+      title={WI-PI Bridge: Raspberry Pi based Wi-Fi bridge for routing clients to internet connection}, 
       author={Mohamed Debbagh},
       year={2023},
-      eprint={2305.00980},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
+      url = {https://moha7108.github.io/2023/01/27/wipi.html}
 }
 ```
 ### Overview
