--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -42,7 +42,7 @@ icon: fa-solid fa-eye
 
 1. Connect client to Access Point (default: wipi_bridge, psk: adamchuk)​
 1. On web browser go to: *10.0.1.1:1880/​* or *wipi-bridge.local:1880/* (mdns option)
-1. Configure settings
+1. [Configure settings](#configuration-network-connection)
 
 #### Accessing through connected network connection
 
@@ -50,8 +50,18 @@ icon: fa-solid fa-eye
 
 ### Interface:
 
-<!-- <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://docs.google.com/presentation/d/e/2PACX-1vSsbmKOLcm0Y3kSmO2Iyj76pJZNOuj9v3K2x5O0BYFXWcaK-l8ex586Pr44z5yEYEZdSk7RSevOSpdf/embed?start=true&loop=true&delayms=5000' frameborder='0' width='1440' height='839' allowfullscreen='true' mozallowfullscreen='true' webkitallowfullscreen='true'></iframe></div>
-<br/> -->
+The Wipi bridge can be accessed by browser following the [instructions](#connecting-to-the-wi-pi-bridge-dashboard) above
+
+<img src="/assets/images/wipi/interface.png" style="width:100%">
+
+#### (WLAN1) Network Connection
+This section displays the information of the connected network that we are trying to bridge to our clients. The information displayed includes the SSID of the host network, The IP Address of the bridge within the host network, and finally the Netmask and Broadcast of the host network. If the information does not display, this means that the wipi bridge is not connected to any host network.
+
+#### (WLAN0) Access Point
+This section displays the information of the bridge connection which serves as an access point for the device. This section is configurable, and the SSID and PSK of the access point can be changed. Default congiuration is *SSID: wipi_bridge, PSK: adamchuk*.
+
+#### Configuration Network Connection
+This section allows you to connect to a host network via WLAN1. The scan button manually queries available network detected nearby. You must select the security type such as WPA or WPA-enterprise and input the security information corresponding to the security time. Click update when all information is entered. The RPI will restart and automatically connect you to the host network. Now the Access point (WLAN0) will act as a bridge to the host network. 
 
 ### Compatible Devices:
 
