--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -16,12 +16,12 @@ icon: fa-solid fa-eye
       url = {https://moha7108.github.io/2023/01/27/wipi.html}
 }
 ```
-### Overview
+
 <img src="/assets/images/wipi/bridge_diagram.png" style="width:100%">
 
 <img src="/assets/images/wipi/wipi.png" style="width:25%">
 
-#### Materials
+### Materials
 - Raspberry Pi<sup>\**</sup>
 - Wi-Fi Dongle​<sup>\**</sup>
 - Micro SD Card​
