--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -67,6 +67,11 @@ This section allows you to connect to a host network via WLAN1. The scan button 
 
 ### Compatible Devices:
 
-<!-- <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><object data='/assets/papers/2023-04-24_attr_to_img.pdf' type='application/pdf'>     <embed src='/assets/papers/2023-04-24_attr_to_img.pdf'>         <p>This browser does not support PDFs. Please download the PDF to view it: <a href='/assets/papers/2023-04-24_attr_to_img.pdf'>Download PDF</a>.</p>     </embed> </object></div>
-<br/> -->
+#### Raspberry Pi
+
+| Model    | ver.0.1.1 |
+| -------- | ------- |
+| 3B+  | :heavy_check_mark:  |
+| 4B | :heavy_check_mark:     |
+| March    | :heavy_check_mark:   |
 
