--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -69,9 +69,11 @@ This section allows you to connect to a host network via WLAN1. The scan button 
 
 #### Raspberry Pi
 
-| Model    | ver.0.1.1 |
-| -------- | ------- |
-| 3B+  | :heavy_check_mark:  |
-| 4B | :heavy_check_mark:     |
-| March    | :heavy_check_mark:   |
-
+| Model    |   [ver. 0.1.1](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link)     |
+| -------- | :----------:    |
+| 3B+      |     &#9745;     |
+| 4B       |     &#9745;     |
+| zero w   |     &#9745;     |
+| zero 2 w |     &#9745;     |
+| zero     |     &#9744;     |
+| zero 2   |     &#9744;     |
