--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -66,6 +66,7 @@ This section displays the information of the bridge connection which serves as a
 This section allows you to connect to a host network via WLAN1. The scan button manually queries available network detected nearby. You must select the security type such as WPA or WPA-enterprise and input the security information corresponding to the security time. Click update when all information is entered. The RPI will restart and automatically connect you to the host network. Now the Access point (WLAN0) will act as a bridge to the host network. 
 
 ### Compatible Devices:
+These are a list of devices that were tested. It is possible that other devices work, however cannot be gaurunteed it is not gauranteed.
 
 #### Raspberry Pi
 
@@ -77,3 +78,6 @@ This section allows you to connect to a host network via WLAN1. The scan button 
 | zero 2 w |     &#9745;     |
 | zero     |     &#9744;     |
 | zero 2   |     &#9744;     |
+
+
+#### Wifi Dongle
