--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -80,4 +80,9 @@ These are a list of devices that were tested. It is possible that other devices 
 | zero 2   |     &#9744;     |
 
 
-#### Wifi Dongle
+#### Wi-Fi Dongle
+
+| Chipset          |   [ver. 0.1.1](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link)     |
+| --------         | :----------:    |
+|  RTl8192cu       |     &#9745;     |
+|  Ralink RT5370   |     &#9744;     |
