--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -17,7 +17,7 @@ icon: fa-solid fa-eye
 }
 ```
 
-<br>
+## Project Details
 
 <img src="/assets/images/wipi/bridge_diagram.png" style="width:100%">
 
@@ -43,12 +43,13 @@ icon: fa-solid fa-eye
 #### Access without network connection(First time Connecting):​
 
 1. Connect client to Access Point (default: wipi_bridge, psk: adamchuk)​
-1. On web browser go to: *10.0.1.1:1880/​* or *wipi-bridge.local:1880/* (mdns option)
+1. On web browser go to: **10.0.1.1:1880/**​ or **wipi-bridge.local:1880/** (mdns option)
+
 1. [Configure settings](#configuration-network-connection)
 
 #### Accessing through connected network connection
 
-1. On web browser go to: *wipi-bridge.local:1880/* (mdns option) or *x.x.x.x:1880/* (x.x.x.x is the network IP of the WI-PI Brigdge assigned by the router)​
+1. On web browser go to: **wipi-bridge.local:1880/** (mdns option) or **x.x.x.x:1880/** (x.x.x.x is the network IP of the WI-PI Brigdge assigned by the router)​
 
 ### Interface:
 
@@ -72,8 +73,8 @@ These are a list of devices that were tested. It is possible that other devices 
 
 | Model    |   [ver. 0.1.1](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link)     |
 | -------- | :----------:    |
-| 3B+      |     &#9745;     |
 | 4B       |     &#9745;     |
+| 3B+      |     &#9745;     |
 | zero w   |     &#9745;     |
 | zero 2 w |     &#9745;     |
 | zero     |     &#9744;     |
@@ -86,3 +87,17 @@ These are a list of devices that were tested. It is possible that other devices 
 | --------         | :----------:    |
 |  RTl8192cu       |     &#9745;     |
 |  Ralink RT5370   |     &#9744;     |
+
+## Feedback
+
+All kinds of feedback and contributions are welcome.
+
+- [GitHub page](https://github.com/moha7108/wipi-bridge-ui)
+- [Create an issue](https://github.com/moha7108/wipi-bridge-ui/issues)
+- [Create a pull request](https://github.com/moha7108/wipi-bridge-ui/pulls)
+- Reach out to @moha7108
+
+## Contributors
+
+- Mohamed Debbagh
+  - [GitHub](https://github.com/moha7108/), [Website](https://moha7108.github.io/)
