--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -98,6 +98,9 @@ All kinds of feedback and contributions are welcome.
 - Reach out to @moha7108
 
 ## Contributors
+If you found this project useful please consider buying the contributors a cup of coffee!
 
 - Mohamed Debbagh
   - [GitHub](https://github.com/moha7108/), [Website](https://moha7108.github.io/)
+
+  [![ko-fi](https://ko-fi.com/img/githubbutton_sm.svg)](https://ko-fi.com/O4O4KWN76)
