--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -85,7 +85,7 @@ These are a list of devices that were tested. It is possible that other devices 
 
 | Chipset          |   [ver. 0.1.1](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link)     |
 | --------         | :----------:    |
-|  RTl8192cu       |     &#9745;     |
+|  [RTl8192cu](https://www.adafruit.com/product/1012)       |     &#9745;     |
 |  Ralink RT5370   |     &#9744;     |
 
 ## Feedback
