--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -101,6 +101,5 @@ All kinds of feedback and contributions are welcome.
 If you found this project useful please consider buying the contributors a cup of coffee!
 
 - Mohamed Debbagh
-  - [GitHub](https://github.com/moha7108/), [Website](https://moha7108.github.io/)
-
+  - [GitHub](https://github.com/moha7108/), [Website](https://moha7108.github.io/)<br>
   [![ko-fi](https://ko-fi.com/img/githubbutton_sm.svg)](https://ko-fi.com/O4O4KWN76)
