--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -2,7 +2,7 @@
 title: WI-PI Bridge
 author: Mohamed Debbagh
 layout: post
-icon: fa-solid fa-eye
+icon: fa-solid fa-wifi
 ---
  A Raspberry Pi (RPI) based Wi-Fi Bridge for routing clients to internet connection through a RPI router. It is used as a Wi-Fi repeater, or to give access to internet connections with enterprise WPA security protocol for lower level electronics such as Wi-Fi enabled microcontrollers and IOT devices. Users may also want to use this as an easy-to-use interface for accessing RPI through local networks over SSH after first time installation, without having a monitor and keyboard setup or configuring settings pre-installation with RPI imager.
 
