--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -16,6 +16,8 @@ icon: fa-solid fa-wifi
       url = {https://moha7108.github.io/2023/01/27/wipi.html}
 }
 ```
+*If you find this project useful please consider buying me a cup of coffee!*<br>
+[![ko-fi](https://ko-fi.com/img/githubbutton_sm.svg)](https://ko-fi.com/O4O4KWN76)
 
 ## Project Details
 
