--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -9,11 +9,15 @@ icon: fa-solid fa-wifi
 
 #### Cite this project (BibTeX):
 ```
-@misc{debbagh2023wipi,
-      title={WI-PI Bridge: Raspberry Pi based Wi-Fi bridge for routing clients to internet connection}, 
-      author={Mohamed Debbagh},
-      year={2023},
-      url = {https://moha7108.github.io/2023/01/27/wipi.html}
+@software{debbagh2023wipi,
+  author       = {Debbagh, Mohamed},
+  title        = {{WI-PI Bridge: Raspberry Pi based Wi-Fi bridge for 
+                   routing clients to internet connection}},
+  year         = 2023,
+  publisher    = {Zenodo},
+  version      = {0.1.1},
+  doi          = {10.5281/zenodo.10204564},
+  url          = {https://doi.org/10.5281/zenodo.10204564}
 }
 ```
 *If you find this project useful please consider buying me a cup of coffee!*<br>
