--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -11,8 +11,7 @@ icon: fa-solid fa-wifi
 ```
 @software{debbagh2023wipi,
   author       = {Debbagh, Mohamed},
-  title        = {{WI-PI Bridge: Raspberry Pi based Wi-Fi bridge for 
-                   routing clients to internet connection}},
+  title        = {WI-PI Bridge: Raspberry Pi based Wi-Fi bridge for routing clients to internet connection},
   year         = 2023,
   publisher    = {Zenodo},
   version      = {0.1.1},
