--- a/_posts/2023-01-27-wipi.md
+++ b/_posts/2023-01-27-wipi.md
@@ -8,6 +8,8 @@ icon: fa-solid fa-wifi
 
 
 #### Cite this project (BibTeX):
+[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.10204564.svg)](https://doi.org/10.5281/zenodo.10204564)
+
 ```
 @software{debbagh2023wipi,
   author       = {Debbagh, Mohamed},
@@ -39,7 +41,7 @@ icon: fa-solid fa-wifi
 <sub><sup><sup>\***</sup> 5V 3A supply recommended</sup></sub>
 
 ### Installation Instructions
-1. The RPi OS image file can be downloaded [here](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link).
+1. The RPi OS image file can be downloaded [here](https://doi.org/10.5281/zenodo.10204564).
 1. You can install the image file onto a microSD card using the [RPi Imager application](https://www.raspberrypi.com/software/).
 1. Once the image file has been copied to the microSD card, instert the card into the RPi, plug in the wifi-dongle into the USB port of the RPi, and then boot the device.
 1. Done, the WI-PI bridge should be working! Check your network wifi connections for the SSID [wipi_bridge]
@@ -72,11 +74,11 @@ This section displays the information of the bridge connection which serves as a
 This section allows you to connect to a host network via WLAN1. The scan button manually queries available network detected nearby. You must select the security type such as WPA or WPA-enterprise and input the security information corresponding to the security time. Click update when all information is entered. The RPI will restart and automatically connect you to the host network. Now the Access point (WLAN0) will act as a bridge to the host network. 
 
 ### Compatible Devices:
-These are a list of devices that were tested. It is possible that other devices work, however cannot be gaurunteed it is not gauranteed.
+These are a list of devices that were tested. It is possible that other devices work, however cannot be guaranteed it is not guaranteed.
 
 #### Raspberry Pi
 
-| Model    |   [ver. 0.1.1](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link)     |
+| Model    |   [ver. 0.1.1](https://doi.org/10.5281/zenodo.10204564)     |
 | -------- | :----------:    |
 | 4B       |     &#9745;     |
 | 3B+      |     &#9745;     |
@@ -88,7 +90,7 @@ These are a list of devices that were tested. It is possible that other devices 
 
 #### Wi-Fi Dongle
 
-| Chipset          |   [ver. 0.1.1](https://drive.google.com/file/d/1kfivoJRY1-tfTbqO5MyLWXaK64weQToH/view?usp=share_link)     |
+| Chipset          |   [ver. 0.1.1](https://doi.org/10.5281/zenodo.10204564)     |
 | --------         | :----------:    |
 |  [RTl8192cu](https://www.adafruit.com/product/1012)       |     &#9745;     |
 |  Ralink RT5370   |     &#9744;     |
