--- a/_posts/2024-05-20-SIPGS.md
+++ b/_posts/2024-05-20-SIPGS.md
@@ -10,11 +10,12 @@ icon: fa-solid fa-eye
 
 
 
-![Description](https://www.dropbox.com/scl/fi/zgetdvfy13u6wvfenu3ar/result.gif?rlkey=0d00im0i0phn4e30pwi6oqpjn&raw=1)
+<!-- ![Description](https://www.dropbox.com/scl/fi/zgetdvfy13u6wvfenu3ar/result.gif?rlkey=0d00im0i0phn4e30pwi6oqpjn&raw=1)
 
-![Description](https://i.imgur.com/wXPghgg.gif)
+![Description](https://i.imgur.com/wXPghgg.gif) -->
 
 
+<img src="https://i.imgur.com/wXPghgg.gif" style="max-width: 100%; height: auto;" alt="Description">
 
 
 
