--- a/_posts/2024-05-20-SIPGS.md
+++ b/_posts/2024-05-20-SIPGS.md
@@ -7,12 +7,9 @@ icon: fa-solid fa-eye
 
 **Abstract:** A plant growth simulation can be characterized as a reconstructed visual representation of a plant or plant system. The phenotypic characteristics and plant structures are controlled by the scene environment and other contextual attributes. Considering the temporal dependencies and compounding effects of various factors on growth trajectories, we formulate a probabilistic approach to the simulation task by solving a frame synthesis and pattern recognition problem. We introduce a Sequence-Informed Plant Growth Simulation framework (SI-PGS) that employs a conditional generative model to implicitly learn a distribution of possible plant representations within a dynamic scene from a fusion of low dimensional temporal sensor and context data. Methods such as controlled latent sampling and recurrent output connections are used to improve coherence in plant structures between frames of predictions. In this work, we demonstrate that SI-PGS is able to capture temporal dependencies and continuously generate realistic frames of a plant scene.
 
-
 **Corresponding Paper:** [ArXiv](https://arxiv.org/abs/2405.14796)
 
-
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;} .embed-container img, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><img src='https://i.imgur.com/c2ahgiK.gif' style='max-width: 75%; height: auto;' alt='Description'></div>
-
+**Project Repositories:** [github](https://github.com/mohas95/Sequence-Informed-Plant-Growth-Simulation), [pre-trained models](https://doi.org/10.5281/zenodo.11495687)
 
 ## Cite this work
 ```bibtex
@@ -26,6 +23,12 @@ icon: fa-solid fa-eye
 }
 ```
 
+## Supplemental Figures
+### Fig. S1
+<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;} .embed-container img, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><img src='https://i.imgur.com/c2ahgiK.gif' style='max-width: 75%; height: auto;' alt='Description'></div>
+
+### Fig. S2
+<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;} .embed-container img, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><img src='https://i.imgur.com/uwKOvPC.gif' style='max-width: 75%; height: auto;' alt='Description'></div>
 
 
 <!-- ### Application *(Accepted)*
